2006-08-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
		Fix the initial value reading.
		Based on a report and a patch of Roei Erez  <roeie@mainsoft.com>

2006-08-15  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Fix the CopyTo method.

2006-07-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/IIndexedCollection.cs
	  CodeGen/templates/IndexedCollectionImplem.cs
	  Mono.Cecil/IConstructorCollection.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs:
		Add a GetConstructor(bool,ParameterDefinitionCollection) method
		required by the linker.

	* Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/StringsHeap.cs:
		Read the string on demand, based on the index.
		Needed due to some obfuscators that create a string entry like
		xClassName, and make the pointer points to after the x.

2006-07-03	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/ImageReader.cs:
	  	CompactFramework compatibility.

2006-07-02	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/ImageReader.cs:
	  	Proper FileNotFoundException construction.

	* Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/IMethod.cs:
		Helper properties IsInternalCall and IsRuntime.

2006-06-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CilWorker.cs:
		Fix ldc.i4.s emitting.

2006-06-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Fix for compiling on CF 1.
	* Mono.Cecil/StructureReader.cs:
		Fix for a "bug" when csc 7.1 emits an assembly
		with an assembly row, but no blob heap.
		Plus style fix.

2006-06-08  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/MethodDefinition.cs