@@ -29,7 +29,6 @@
 namespace Mono.Cecil {
 
 	using System;
-	using System.Reflection;
 
 	using Mono.Cecil.Metadata;
 
@@ -46,6 +45,8 @@ namespace Mono.Cecil {
 
 		ModuleDefinition m_mainModule;
 		StructureReader m_reader;
+
+		IAssemblyResolver m_resolver;
 
 		public MetadataToken MetadataToken {
 			get { return m_token; }
@@ -108,6 +109,11 @@ namespace Mono.Cecil {
 			get { return m_reader; }
 		}
 
+		public IAssemblyResolver Resolver {
+			get { return m_resolver; }
+			set { m_resolver = value; }
+		}
+
 		internal AssemblyDefinition (AssemblyNameDefinition name)
 		{
 			if (name == null)
@@ -115,6 +121,7 @@ namespace Mono.Cecil {
 
 			m_asmName = name;
 			m_modules = new ModuleDefinitionCollection (this);
+			m_resolver = new DefaultAssemblyResolver ();
 		}
 
 		internal AssemblyDefinition (AssemblyNameDefinition name, StructureReader reader) : this (name)
